--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright notice
+-->
 <head>
 	<title>An Example Web-site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
