fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Make some more troubles.
+			Dummy text
 		</p>
 	</main>
 	<footer class="container">
