--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright notice
-	Adding changes before rebasing conflicts
+	Same text to be changed.
 -->
 <head>
 	<title>Very Respectful Web-site</title>
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Dummy text
+			Make some more troubles.
 		</p>
 	</main>
 	<footer class="container">
