Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Same text to be changed.
 -->
 <head>
-	<title>Very Respectful Web-site</title>
+	<title>lots of troubles</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
