local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Vojin Koprivica </p>
+		<p>&copy; Vojin Koprivica 2024 Copyright </p>
 	</footer>
 </body>
 </html>
